force-app/main/default/objects/Behavior__c/Behavior__c.object-meta.xml
<CustomObject>
    <label>Behavior</label>
    <nameField>
        <displayFormat>B-{00000}</displayFormat>
        <label>Behavior Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Behaviors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>