force-app/main/default/objects/Behavior__c/fields/Behavior_Type__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Type__c</fullName>
    <label>Behavior Type</label>
    <referenceTo>Behavior_Type__c</referenceTo>
    <relationshipLabel>Behaviors</relationshipLabel>
    <relationshipName>Behaviors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>