force-app/main/default/objects/Behavior__c/fields/Calculation_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Timeframe__c</fullName>
    <formula>TEXT(Behavior_Type__r.Calculation_Timeframe__c)</formula>
    <label>Calculation Timeframe</label>
    <type>Text</type>
</CustomField>