force-app/main/default/objects/Behavior__c/fields/Star_Value__c.field-meta.xml
<CustomField>
    <fullName>Star_Value__c</fullName>
    <formula>Behavior_Type__r.Star_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Star Value</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>