force-app/main/default/objects/Behavior__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Behavior_Type__c</columns>
    <columns>Calculation_Timeframe__c</columns>
    <columns>Star_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>